<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:checked="true"
            android:title="Home"/>

        <item
            android:id="@+id/nav_listing"
            android:icon="@drawable/nav_listings"
            android:title="@string/my_listing"/>

        <item
            android:id="@+id/nav_Users_near_me"
            android:icon="@drawable/nav_users"
            android:title="@string/users_near_me"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nav_share"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/nav_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/log_out"/>
    </group>

    <item
        android:title="@string/business"
        android:id="@+id/business">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/terms_and_conditons"
                    android:title="@string/terms_and_conditions">
                </item>

                <item
                    android:id="@+id/help"
                    android:title="@string/help_center">
                </item>
            </group>
        </menu>

    </item>
</menu>