<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">
                    <ImageView
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="28dp"

                android:src="@drawable/baseline_cancel">

            </ImageView>

                    <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/choose_your_role"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="25dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/donar_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/donor"
                android:textColor="#ffffff"
                android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/volunteer_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:background="@drawable/button_background"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/volunteer"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            </LinearLayout>


        </FrameLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>