<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/loooo"
    android:clickable="true"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="207dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:padding="7dp"
            android:paddingStart="3dp"
            android:text="@string/hi_nplease_login"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="Enter your Email"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="**********"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#707070"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="10dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="#707070"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="5dp"
                android:text="@string/create_account"
                android:textColor="#707070"
                android:textSize="15dp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/forgetPass"
                android:text="Forgot Passsword?"
                android:textColor="#707070"
                android:textSize="15dp"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Or Login With"
                android:textColor="#707070"
                android:textSize="15dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_background">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="9dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    app:srcCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="Facebook"
                    android:textColor="#066D47"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />
            </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="11dp"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:background="@drawable/normal_background">

            <androidx.cardview.widget.CardView
                android:id="@+id/googleSignIn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="9dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="7dp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="Google"
                    android:textColor="#066D47"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />
            </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/button_background"
            android:text="Login"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>